# Gemma-3-JAX

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  config.py  create_dev_vm.py  deploy_vertex.py  entrypoint.sh  gemma_forward.py  inspect_weights.py  main.py  nn_utils.py  prompt.py  pyproject.toml  remote_sync.py  restack_weights.py  run_job.py  save_params.py  setup.py  sft_data.py  supervised_train.py  tokenizer_cli.py  visualize_params.py
config/: model.py
core/: forward_common.py  forward_inference.py  forward_parallel.py  forward_parralel.py  gemma_forward.py  gemma_forward_inference.py  gemma_forward_parralel.py  rl.py  rl_train.py  supervised_train.py
docs/: new_baseline_findings.md  on_device_experiments.md  xplane_findings.md
entrypoints/: forward.py  forward_inference.py  gemma_forward.py  gemma_forward_inference.py  rl.py  supervised.py
ops/: create_dev_vm.py  deploy_vertex.py  inference_memory_forensics.md  new_tpu.md  profile_memory_cli_extraction.md  remote_sync.py  rl_stage.py  tensorboard_vm_runbook.md
tests/: test_params_io_27b_schema.py
utils/: gcp.py  inspect_weights.py  load_sharded.py  load_sharded_host.py  params_io.py  params_io_1b.py  params_io_27b.py  profiling.py  prompt.py  query_model.py  restack_weights.py  save_params.py  sft_data.py  tokenize.py  tokenize_text.py  tokenizer_cli.py  visualize_params.py  wandb_logging.py
