[project]
name = "jax-gemma-1b"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jax>=0.8.2",
    "jax[tpu]>=0.8.2; sys_platform == 'linux'",
    "google-cloud-storage>=2.18.0",
    "ml-dtypes>=0.5.4",
    "numpy>=2.4.0",
    "optax>=0.2.6",
    "rich>=14.2.0",
    "safetensors>=0.7.0",
    "sentencepiece>=0.2.1",
]

[tool.ruff.lint]
ignore = ["E402"]
