[project]
name = "jax-gemma-1b"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax>=0.8.2",
    "ml-dtypes>=0.5.4",
    "numpy>=2.4.0",
    "optax>=0.2.6",
    "rich>=14.2.0",
    "safetensors>=0.7.0",
    "sentencepiece>=0.2.1",
    "python-dotenv>=1.0.0",
    "google-cloud-logging>=3.13.0",
    "tensorboard-plugin-profile>=2.21.3",
    "tensorboard>=2.18.0",
]

[project.optional-dependencies]
cuda = ["jax[cuda12]>=0.8.2"]
tpu = ["jax[tpu]>=0.8.2", "tpu-info"]

[tool.ruff.lint]
ignore = ["E402"]

[[tool.uv.index]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/libtpu_releases.html"
explicit = false

[dependency-groups]
dev = ["pre-commit>=4.5.1"]
