[project]
name = "jax-gemma-1b"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jax>=0.8.2",
    "orbax-checkpoint>=0.5.16",
    "tensorstore>=0.1.56",
    "gcsfs>=2024.10.0",
    "ml-dtypes>=0.5.4",
    "numpy>=2.4.0",
    "optax>=0.2.6",
    "rich>=14.2.0",
    "sentencepiece>=0.2.1",
    "python-dotenv>=1.0.0",
    "google-cloud-logging>=3.13.0",
    "google-cloud-secret-manager>=2.20.0",
    "wandb>=0.17.0",
    "tensorboard-plugin-profile>=2.21.3",
    "tensorboard>=2.18.0",
]

[project.optional-dependencies]
cuda = ["jax[cuda12]>=0.8.2"]
tpu = ["jax[tpu]>=0.8.2", "tpu-info"]
mps = ["jax-mps>=0.9.5"]

[tool.ruff.lint]
ignore = ["E402"]

[[tool.uv.index]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/libtpu_releases.html"
explicit = false

[dependency-groups]
dev = ["pre-commit>=4.5.1"]
